--- a/styles/font-mixins.scss
+++ b/styles/font-mixins.scss
@@ -171,7 +171,7 @@
 
 
 @mixin large-text-font($color: $color-default) {
-  font-family: "Silkscreen", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 21px;
   line-height: 28px;
